eks-cluster/envs/dev/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ae-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: api3test.dev.aetonix.xyz
    http:
      paths:
      - path: /ping
        pathType: Exact
        backend:
          service:
            name: myapp-service
            port:
              number: 443
      - path: /v3/meetings
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 443
      - path: /v3/users
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 443
      - path: /v3/join
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 443
